# pathtype

./: .gitignore  README.md  setup.cfg
.github/workflows/: code-check.yml  publish.yml
docs/: conf.py  index.rst
docs/api/: path.rst  validation.rst
pathtype/: path.py  validation.py
src/pathtype/: __init__.py  path.py  validation.py
test/: mixins.py  test_path.py  test_validation.py  utils.py
