[metadata]
name = pathtype
version = file: VERSION
description = Validate paths on command line and convert them to Path instances
long_description = file: README.md
author = Xavier Frenette

[options]
python_requires = >=3.8

[options.extras_require]
dev =
    black~=22.3
    flake8~=4.0
    mypy~=0.96
    pytest~=7.1
