[metadata]
name = pathtype
version = file: VERSION
description = Easily validate paths in command line arguments. To be used with argparse.
long_description = file: README.md
long_description_content_type = text/markdown
author = Xavier Frenette
url = https://github.com/xfrenette/pathtype
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    argparse
    argument parsing
    path
    pathlib
    cli
    command line

[options]
python_requires = >=3.7
include_package_data = True

[flake8]
max-line-length = 88
extend-ignore = E203
